--- a/app/globals.css
+++ b/app/globals.css
@@ -42,3 +42,8 @@
 h4 {
   font-weight: 700 !important;
 }
+
+.p-component-overlay {
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 999 !important;
+}
